--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <meta name="format-detection" content="telephone=yes">
   <meta name="theme-color" content="#0b0f17">
   <meta name="color-scheme" content="dark light">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CHV9DSNQBS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-CHV9DSNQBS');
+</script>
   <!-- ======= Primary SEO ======= -->
   <title>Nazar Optik | Mersin Akdeniz & Toroslar Gözlükçü • Optik • Lens • Cam Değişimi</title>
   <meta name="description" content="Nazar Optik (Mersin Akdeniz): numaralı gözlük, gözlük camı değişimi, kontakt lens, güneş gözlüğü ve gözlük tamiri. Adres: Yeni, 5328. Sk. 17/B, 33050 Akdeniz/Mersin. Telefon: 0507 077 75 06">
