--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="format-detection" content="telephone=yes">
   <meta name="theme-color" content="#0b0f17">
   <meta name="color-scheme" content="dark light">
+  <link rel="icon" type="image/svg+xml" href="favico.svg">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CHV9DSNQBS"></script>
 <script>
