--- a/gozluk-cami-degisimi-mersin.html
+++ b/gozluk-cami-degisimi-mersin.html
@@ -8,6 +8,7 @@
   <meta name="robots" content="index,follow"/>
   <link rel="canonical" href="https://mersingözlükcü.site/gozluk-cami-degisimi-mersin.html"/>
   <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" type="image/svg+xml" href="favico.svg">
 </head>
 <body>
 <header class="site-header">
