--- a/gozluk-tamiri-mersin.html
+++ b/gozluk-tamiri-mersin.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index,follow"/>
   <link rel="canonical" href="https://mersingözlükcü.site/gozluk-tamiri-mersin.html"/>
   <link rel="stylesheet" href="styles.css"/>
-
+  <link rel="icon" type="image/svg+xml" href="favico.svg">
   <!-- FAQ (Tamir odaklı) -->
   <script type="application/ld+json">
   {
