--- a/toroslar-gozlukcu.html
+++ b/toroslar-gozlukcu.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index,follow"/>
   <link rel="canonical" href="https://mersingözlükcü.site/toroslar-gozlukcu.html"/>
   <link rel="stylesheet" href="styles.css"/>
-
+  <link rel="icon" type="image/svg+xml" href="favico.svg">
   <!-- FAQ (Toroslar odaklı) -->
   <script type="application/ld+json">
   {
