--- a/index.html
+++ b/index.html
@@ -518,5 +518,14 @@
    aria-label="WhatsApp">💬</a>
 
 <script src="main.js"></script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Optician",
+  "name": "Toros Nazar Optik",
+  "url": "https://xn--mersingzlkc-xfb4fc.site/",
+  "logo": "https://xn--mersingzlkc-xfb4fc.site/favico.svg"
+}
+</script>
 </body>
 </html>
